<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_gazebo_actor</name>
  <version>2.2.3</version>
  <description>
    Gazebo simulation package for the TurtleBot3
  </description>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues</url>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="fmasaki2020@gmail.com">Masaki Fujiwara</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

  <exec_depend>turtlebot3_description</exec_depend>

  <export>
    <build_type>catkin</build_type>
    <!-- <gazebo_ros gazebo_model_path="${prefix}/models"/> -->
  </export>
</package>
